Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<title>Андрей Лазаренко - интегративная психотерапия гештальт и культурно-исторического подходов</title>
 
-	<link rel="shortcut icon" href="https://andrii-lazarenko.comimages/gt_favicon.png">
+	<link rel="shortcut icon" href="https://andrii-lazarenko.com/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="https://andrii-lazarenko.comcss/styles.css">
+	<link rel="stylesheet" href="https://andrii-lazarenko.com/css/styles.css">
 
 	
 
@@ -32,9 +32,9 @@
 <header id="header">		
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="https://andrii-lazarenko.comimages/guy.jpg" alt="">
+			<img class="img-circle" src="https://andrii-lazarenko.com/images/guy.jpg" alt="">
 			<span class="title">Андрей Лазаренко</span>
-			<span class="tagline">Интегративная психотерапия гештальт и культурно-исторического подходов&lt;br/&gt; Терапия организаций<br>
+			<span class="tagline">Интегративная психотерапия гештальт и культурно-исторического подходов. Терапия организаций<br>
 				<a href="">andrew.yeremenko@gmail.com</a>
 			</span>			
 		</h1>
@@ -247,7 +247,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="https://andrii-lazarenko.comjs/template.js"></script>
+<script src="https://andrii-lazarenko.com/js/template.js"></script>
 <script id="dsq-count-scr" src="///count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
