Publishing to gh-pages

--- a/service/psychotherapy/index.html
+++ b/service/psychotherapy/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	
-	<title>Андрей Лазаренко - интегративная психотерапия гештальт и культурно-исторического подходов</title>
+	<title>Андрей Лазаренко - оргтерапевт. Интегративная психотерапия гештальт и культурно-исторического подходов</title>
 
 	<link rel="shortcut icon" href="https://andrii-lazarenko.com/images/gt_favicon.png">
 
@@ -111,7 +111,7 @@
 <li>зависимостями;</li>
 <li>травмами насилия;</li>
 <li>страхами;</li>
-<li>психосоматикой (болезни и боли, которых как буд-то не должно быть в соответсвии с результатми диагностики);</li>
+<li>психосоматикой (болезни и боли, которых как будто не должно быть в соответсвии с результатми диагностики);</li>
 <li>депрессиями;</li>
 <li>бессоницей;</li>
 <li>утратой либидо;</li>
