Publishing to gh-pages

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
         
             <div class="col-sm-6 col-md-3">
                 <h3 class="text-center">Построение команд</h3>
-                <p><p>Наиболее эффективная работа с командой будет после того, как тренер-терапевт <a href="/service/psychotherapy-for-owners/">выстроит отношения с собственником бизнеса</a> (или как минимум руководителем группы, которую нужно сформировать в команду &ndash; но лучше всего работать от &ldquo;головы&rdquo; компании, как минимум с генеральным директором, человеком у которого реальная &ldquo;верховная&rdquo; власть).
-Дальше идет знакомство с командой и ее учасниками, после чего стоит понять на каком этапе развития общности она находится (мир бизнеса на данном этапе более знаком с западной терминологией, поэтому воспользуюсь сейчас ею; по Такману:</p>
+                <p><p>Для эффективной работы с командой необходимо тренеру-терапевту <a href="/service/psychotherapy-for-owners/">выстроить отношения с руководителем  этой группы</a>. Лучше всего с собственником, потому что, даже если руководит гендиректор, то все же главная &ldquo;фигура&rdquo; в бизнесе реализуется именно собственника.
+Дальше идет знакомство с командой и ее учасниками. После чего стоит понять на каком этапе развития общности она находится. Мир бизнеса в наши дни более знаком с западной терминологией, поэтому воспользуюсь сейчас ею; по Такману:</p>
 
 <ul>
 <li>рабочая группа,</li>
 <li>псевдо-команда,</li>
 <li>потенциальная команда,</li>
-<li>эффективная команда).</li>
+<li>эффективная команда.</li>
 </ul>
 
 <p></p></p>
@@ -175,7 +175,7 @@
                 <h3 class="text-center">Народные методы работы с телом</h3>
                 <p><p>Это похоже на массажные техники, с целью снять боль, поправить кости/позвонки, а также войти в психологическую помеху через тело, которая проявляется через боль и телесную реакцию.</p>
 
-<p>У меня большой опыт боевых искуств, данность этого пути состоит в необходимости самовостановления и восставновления других. У меня есть освоенные курс массажа, но я все-таки больше применяю славянские целительные техники, такие как:</p>
+<p>У меня большой опыт боевых искуств, данность этого пути состоит в необходимости самовосстановления и восставновления других. У меня есть освоенные курс массажа, но я все-таки больше применяю славянские целительные техники, такие как:</p>
 
 <ul>
 <li>работа с &ldquo;телом боли&rdquo;,</li>
