Publishing to gh-pages

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-sm-6 col-md-3">
                 <h3 class="text-center">Построение команд</h3>
                 <p><p>Для эффективной работы с командой необходимо тренеру-терапевту <a href="/service/psychotherapy-for-owners/">выстроить отношения с руководителем  этой группы</a>. Лучше всего с собственником, потому что, даже если руководит гендиректор, то все же главная &ldquo;фигура&rdquo; в бизнесе реализуется именно собственника.
-Дальше идет знакомство с командой и ее учасниками. После чего стоит понять на каком этапе развития общности она находится. Мир бизнеса в наши дни более знаком с западной терминологией, поэтому воспользуюсь сейчас ею; по Такману:</p>
+Дальше идет знакомство с командой и ее учасниками. После чего стоит понять на каком этапе развития общности она находится. Мир бизнеса в наши дни более знаком с западной терминологией, поэтому воспользуюсь сейчас ею. по Такману:</p>
 
 <ul>
 <li>рабочая группа,</li>
