Publishing to gh-pages (publish.sh)

--- a/ua/index.html
+++ b/ua/index.html
@@ -34,7 +34,7 @@
 		<h1 id="logo" class="text-center">
 			<a href="/ua"><img class="img-circle" src="https://andrii-lazarenko.com/images/guy.jpg" alt=""></a>
 			<span class="title">Андрій Лазаренко</span><br/>
-			<span class="tagline">Оргетерапевт. Інтегративна психотерапія гештальт і культурно-історичного підходів</span>	<br/>		
+			<span class="tagline">Психолог. Психотерапевт. Оргтерапевт</span>	<br/>		
 			<a class="tagline" href="">andrii.lazarenko.psy@gmail.com</a>
 		</h1>
 		<div id="langSwitcher">
