--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h1 id="logo" class="text-center">
 			<a href="/ru"><img class="img-circle" src="https://andrii-lazarenko.com/images/guy.jpg" alt=""></a>
 			<span class="title">Андрей Лазаренко</span><br/>
-			<span class="tagline">Психолог. Гештальт-терапевт. Оргтерапевт.</span>	<br/>		
+			<span class="tagline">Психолог. Психотерапевт. Оргтерапевт.</span>	<br/>		
 			<a class="tagline" href="">andrii.lazarenko.psy@gmail.com</a>
 		</h1>
 		<div id="langSwitcher">
