Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         
             <div class="col-sm-6 col-md-3">
                 <h3 class="text-center">Индивидуальная работа</h3>
-                <p><p>В индивидуальной работе возможнен один из трех форматов:</p>
+                <p><p>В индивидуальной работе возможен один из трех форматов:</p>
 <ul>
 <li>терапия;</li>
 <li>коучинг;</li>
 <li>консультирование.</li>
 </ul>
-<p>Первый вид работы, кроме настоящего, направлен в некоторой мере на прошлое. Второй - скорее на будущее. Консультирование позволяет ознакомиться с потенциальным обьемом и форматом возможного взаимодействия под Вашу специфику запроса.</p></p>
+<p>Первый вид работы, кроме настоящего, направлен в некоторой мере на прошлое. Второй - скорее, на будущее. Консультирование позволяет ознакомиться с потенциальным объемом и форматом возможного взаимодействия, соответствующего специфике запроса.</p></p>
                 <p class="text-center"><a href="https://andrii-lazarenko.com/service/individual/" class="btn btn-action">Читать далее...</a></p>
             </div>
         
