Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -143,7 +143,7 @@
 <li><strong>Гудкова Любовь Васильевна</strong> - (очищение, народное мировоззрение и экономика, возвращение смелости мечтать) - живая передача.</li>
 <li><strong>Гудков Алексей Григорьевич</strong> - (совершенно другая глубина боевого искусства) - живая передача.</li>
 <li><strong>Гречка Вадим Анатольевич</strong> - <a href="https://migis.ua">migis.ua</a> (психотерапия, групповая работа, ценность искусства и атмосферы) - живая передача.</li>
-<li><strong>Елисеев Виталий Александрович</strong> - <a href="https://vitaliyeliseev.com/">vitaliyeliseev.com/</a> (возрождение уважения к коучингу, гештальт-коучинг ) - живая передача.</li>
+<li><strong>Елисеев Виталий Александрович</strong> - <a href="https://vitaliyeliseev.com">vitaliyeliseev.com</a> (возрождение уважения к коучингу, гештальт-коучинг ) - живая передача.</li>
 </ul>
 <p>Конечно же этот список не полный, есть ряд учителей, с которыми я знаком через их книги и другую массовую деятельность.</p>
 <h3 id="дипломы-сертификаты-членства">Дипломы, сертификаты, членства</h3>
