--- a/ua/about/index.html
+++ b/ua/about/index.html
@@ -143,7 +143,7 @@
 <li><strong>Гудкова Любов Василівна</strong> - ( очищення, народний світогляд і економіка) - жива передача.</li>
 <li><strong>Гудков Олексій Григорович</strong> - (цілком інша глибина бойового мистецтва) - жива передача.</li>
 <li><strong>Гречка Вадим Анатолійович</strong> - <a href="https://migis.ua">migis.ua</a> (психотерапія, групова робота, цінність мистецтва та поняття атмосферності) - жива передача.</li>
-<li><strong>Єлісєєв Віталій Олександрович</strong> - <a href="https://vitaliyeliseev.com/">vitaliyeliseev.com/</a> (відновлення поваги до коучінгу, гештальт-коучінг ) - жива передача.</li>
+<li><strong>Єлісєєв Віталій Олександрович</strong> - <a href="https://vitaliyeliseev.com">vitaliyeliseev.com</a> (відновлення поваги до коучінгу, гештальт-коучінг ) - жива передача.</li>
 </ul>
 <p>Звичайно ж, це список не повний, оскільки у багатьох інших вчителів я навчався через їхні книги та інші джерела масової комунікації.</p>
 <h3 id="дипломи-сертифікати-членства">Дипломи, сертифікати, членства</h3>
