Publishing to gh-pages (publish.sh)

--- a/ua/service/family-counseling/index.html
+++ b/ua/service/family-counseling/index.html
@@ -205,6 +205,10 @@
 					<li>
 						<h3 class="widget-title"><a href="/ua/refund-policy/">Правила повернення грошових коштів</a></h3>
 					</li>
+				
+					<li>
+						<h3 class="widget-title"><a href="https://secure.wayforpay.com/finid/380667439713">Подякувати фінансово</a></h3>
+					</li>
 				               
 				</ul>
 			</div>
