Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -134,7 +134,7 @@
 <li><strong>Дыхта Леонид Михайлович</strong> - профессор математики (любовь к своему делу и людям) - живая передача.</li>
 <li><strong>Мороз Юрий Леонидович</strong> - тренер по предпринимательству( начинать с нуля) - обучение через материалы.</li>
 <li><strong>Чернявский Сергей</strong> - тренер по предпринимательству (переговоры, умение рассуждать, провел по шагам, как создается рекламное агентство с нуля(удаленный курс) - все получилось) - обучение через материалы, живой тренинг.</li>
-<li><strong>Романова Елена Юрьевна</strong> - тренер по управлению, коуч, психотерапевт, elena-romanova.ru (наука управления, наука иерархии и власти, умения кадровика на предприятии) - живая передача.</li>
+<li><strong>Романова Елена Юрьевна</strong> - тренер по управлению, коуч, психотерапевт, elena-romanova.ru (наука управления, наука иерархии и власти, управление человеческим и трудовым ресурсом предприятия) - живая передача.</li>
 <li><strong>Вукста Владимир Иванович “Голтис”</strong> - тренер и автор системы Исцеляющий Импульс (умение переступать через &ldquo;не могу&rdquo;) - живая передача.</li>
 <li><strong>Коновал Владимир</strong> - тренер по рукопашному бою (сила в мягкости, текучести и постоянстве) - живая передача.</li>
 <li><strong>Старовойт Андрей Петрович</strong> - создатель вида спорта “Вільний бій(Free-fight)” и школы Пересвит (смелость мечтать и побеждать) - живая передача.</li>
@@ -143,7 +143,7 @@
 <li><strong>Гудкова Любовь Васильевна</strong> - (очищение, народное мировоззрение и экономика, возвращение смелости мечтать) - живая передача.</li>
 <li><strong>Гудков Алексей Григорьевич</strong> - (совершенно другая глубина боевого искусства) - живая передача.</li>
 <li><strong>Гречка Вадим Анатольевич</strong> - <a href="https://migis.ua">migis.ua</a> (психотерапия, групповая работа, ценность искусства и атмосферы) - живая передача.</li>
-<li><strong>Елисеев Виталий Александрович</strong> - <a href="https://vitaliyeliseev.com">vitaliyeliseev.com</a> (возрождение уважения к коучингу, гештальт-коучинг ) - живая передача.</li>
+<li><strong>Елисеев Виталий Александрович</strong> - <a href="https://vitaliyeliseev.com">vitaliyeliseev.com</a> (возрождение уважения к коучингу, гештальт-коучинг, работа с организациями ) - живая передача.</li>
 </ul>
 <p>Конечно же этот список не полный, есть ряд учителей, с которыми я знаком через их книги и другую массовую деятельность.</p>
 <h3 id="дипломы-сертификаты-членства">Дипломы, сертификаты, членства</h3>
